[tool.poetry]
name = "grit-official"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "grit_official"}]

[tool.poetry.dependencies]
python = "==3.10.6"
botocore = "==1.27.67"
boto3 = "==1.24.67"
hydra-core = "*"
h5py = "*"
wget = "*"
tqdm = "*"
pillow = "*"
fiftyone = "*"
kaleido = "==0.2.0"
scipy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
